tests/baselines/reference/argumentsSpreadRestIterables(target=es5).errors.txt
argumentsSpreadRestIterables.tsx(3,28): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(4,35): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(5,41): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(8,21): error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(9,21): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(10,27): error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(11,27): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(15,19): error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(16,19): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(17,25): error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
argumentsSpreadRestIterables.tsx(18,25): error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== argumentsSpreadRestIterables.tsx (11 errors) ====
    declare const itNum: Iterable<number>
    
    ;(function(...rest) {})(...itNum)
                               ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    ;(function(a, ...rest) {})('', ...itNum)
                                      ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    ;(function(a, ...rest) {})('', true, ...itNum)
                                            ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    
    declare function fn1<const T extends readonly unknown[]>(...args: T): T;
    const res1 = fn1(..."hello");
                        ~~~~~~~
!!! error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const res2 = fn1(...itNum);
                        ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const res3 = fn1(true, ..."hello");
                              ~~~~~~~
!!! error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const res4 = fn1(true, ...itNum);
                              ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    
    // repro from #52781
    declare function foo<T extends unknown[]>(...args: T): T;
    const p1 = foo(..."hello");
                      ~~~~~~~
!!! error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const p2 = foo(...itNum);
                      ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const p3 = foo(true, ..."hello");
                            ~~~~~~~
!!! error TS2802: Type '"hello"' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    const p4 = foo(true, ...itNum);
                            ~~~~~
!!! error TS2802: Type 'Iterable<number>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    